refactor: remove every non-KDoc comment and condense the KDoc
The code carried a second narrative next to it: comments that no
compiler or test checks, much of it history (PR and issue numbers,
dates, what an earlier version did, which incident a line was written
after). The owner decided the Basetool repositories keep no comments
besides KDoc, and the KDoc short, precise and without history (the main
repository's ADR-0214). Reasoning belongs in the commit message and the
PR body; durable facts in specs, ADRs, docs or the knowledge base.

Removal, per language, each verified to change nothing but comments:
- Kotlin: a lexer that knows string templates (including nested quotes
  inside ${...}), raw strings, nested block comments and backtick
  identifiers drops // and /* */; the whitespace-squeezed code of every
  file is identical before and after. KDoc and licence headers stay.
- XML resources and manifests: <!-- --> removed except the licence
  header; the canonical XML trees compare equal.
- YAML workflows: comments removed with load equality verified; shell
  comments inside run: blocks verified per block with bash.
- Properties, ProGuard rules, ignore files, PowerShell (via the
  PowerShell parser, token streams compared), Python (AST compared).

KDoc: blocks that were long or carried history were rewritten to one
summary sentence, a contract sentence only where a caller needs it, and
the existing tags; long lines are wrapped at the 120-column limit. Code
outside KDoc is verified unchanged.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@gmail.com>