@@ -11,20 +11,12 @@ import java.lang.foreign.ValueLayout
 import java.nio.charset.StandardCharsets
 
 /**
- * The persisted "remember me" credential: the refresh token and the **name** of the DPoP key it is
- * bound to (RFC 9449, `REQ-INGEST-012`). The key itself is not in here and cannot be: it is a
- * non-exportable key inside Windows' key storage ([CngDpopKeyStore]), so a copy of this record —
- * the Credential Manager entry lifted off the disk — carries a sender-constrained refresh token
- * nobody else can redeem. One record still means "Vom Basetool trennen" ([CredentialStore.clear],
- * plus [DpopKeyStore.delete]) disposes of the login at once.
- *
- * <p>Earlier builds put the exported private key into this record (a `dpopKey` field), so a copied
- * record *was* the login. Such a record is read as [CredentialRecord.LegacyExportedKey] and only
- * ever destroyed.
+ * The persisted "remember me" credential: the refresh token and the name of the non-exportable DPoP
+ * key it is bound to (REQ-INGEST-012). The key itself stays in [CngDpopKeyStore], so a copied record
+ * cannot redeem the token.
  *
  * @param refreshToken the Keycloak refresh token
- * @param dpopKeyName the [DpopKey.keyName] the token is bound to, or `null` for a token obtained
- *   without DPoP (a record written before DPoP, or a Keycloak that did not bind)
+ * @param dpopKeyName the [DpopKey.keyName] the token is bound to, or `null` for an unbound token
  */
 @Serializable
 data class StoredCredential(val refreshToken: String, val dpopKeyName: String? = null) {
@@ -43,15 +35,11 @@ data class StoredCredential(val refreshToken: String, val dpopKeyName: String? =
             JSON.encodeToString(serializer(), credential)
 
         /**
-         * Reads a blob back. A blob that is not a JSON object is a **pre-DPoP** entry (the bare
-         * refresh token) and is read as exactly that, with no key; the next successful login
-         * rewrites it in the current shape. A record that still carries an exported `dpopKey` is
-         * [CredentialRecord.LegacyExportedKey]. A corrupt record yields `null` (fail-safe, like the
-         * store itself), so the caller falls back to an interactive login instead of redeeming
-         * garbage.
+         * Decodes a vault blob: a non-JSON blob is a bare refresh token without key, and a record with an
+         * exported `dpopKey` is [CredentialRecord.LegacyExportedKey].
          *
          * @param blob whatever [CredentialStore.load] returned
-         * @return what the vault entry holds, or `null` when it is unusable
+         * @return what the vault entry holds, or `null` when it is corrupt
          */
         fun decodeRecord(blob: String): CredentialRecord? {
             if (!blob.startsWith("{")) return CredentialRecord.Current(StoredCredential(blob))
@@ -78,14 +66,14 @@ data class StoredCredential(val refreshToken: String, val dpopKeyName: String? =
 }
 
 /**
- * Every shape a vault entry has ever had, decoded leniently. Only [StoredCredential.decodeRecord]
- * sees it; nothing is ever *written* in this shape.
+ * Lenient decoding shape covering every vault-entry format; read only by
+ * [StoredCredential.decodeRecord], never written.
  */
 @Serializable
 private data class RawRecord(
     val refreshToken: String = "",
     val dpopKeyName: String? = null,
-    /** The exported PKCS#8+X.509 key pair earlier builds stored — read only to revoke and destroy. */
+    /** The exported PKCS#8 and X.509 key pair of a legacy record, read only to revoke and destroy it. */
     val dpopKey: String? = null,
 )
 
@@ -100,10 +88,8 @@ sealed interface CredentialRecord {
     data class Current(val credential: StoredCredential) : CredentialRecord
 
     /**
-     * A record written by a build that stored the DPoP private key **inside** the record, exported
-     * (before 2026-09-22). It is discarded — its refresh token is bound to that exported key and
-     * cannot move onto a non-exportable one — and the member signs in once more. Not a data class,
-     * so no generated `toString` can print the token or the key.
+     * A legacy record holding the DPoP private key in exported form; it is revoked and discarded, and
+     * the member signs in again. Not a data class, so no generated `toString` prints the secrets.
      *
      * @param refreshToken the refresh token, kept only to revoke it
      * @param exportedKey the exported key pair, kept only to sign that revocation
@@ -112,15 +98,9 @@ sealed interface CredentialRecord {
 }
 
 /**
- * The per-user OS secret store for the single "remember me" credential (epic
- * krt-profit/basetool#639, sub-issue #648). One secret, one fixed target — the abstraction is
- * parameterless so callers cannot smear secrets across keys. Implementations must be **fail-safe**:
- * a store that is unavailable (wrong OS, locked vault) returns "no credential" rather than throwing,
- * so the send flow simply falls back to a fresh device-grant login.
- *
- * <p>Implementations deal in opaque strings only; [StoredCredential] is layered on top via
- * [saveCredential]/[loadCredential] so the record shape can evolve without touching any vault
- * binding.
+ * The per-user OS secret store for the single "remember me" credential, under one fixed target.
+ * Implementations are fail-safe: an unavailable store returns "no credential" instead of throwing.
+ * They handle opaque strings; [saveCredential]/[loadCredential] layer [StoredCredential] on top.
  */
 interface CredentialStore {
 
@@ -163,30 +143,26 @@ interface CredentialStore {
         save(StoredCredential.encode(credential))
 
     /**
-     * Reads the stored credential, transparently upgrading a pre-DPoP bare-refresh-token entry. A
-     * legacy record with an exported key inside is **not** returned here — see [loadRecord].
+     * Reads the stored credential, treating a bare refresh-token entry as an unbound one; a legacy
+     * exported-key record is not returned ([loadRecord]).
      *
-     * @return the record, or {@code null} when nothing usable is stored
+     * @return the credential, or `null` when nothing usable is stored
      */
     fun loadCredential(): StoredCredential? = load()?.let { StoredCredential.decode(it) }
 
     /**
      * Reads what the vault entry holds, legacy shapes included, so a caller can migrate a
-     * [CredentialRecord.LegacyExportedKey] instead of silently ignoring it.
+     * [CredentialRecord.LegacyExportedKey].
      *
-     * @return the record, or {@code null} when nothing (usable) is stored
+     * @return the record, or `null` when nothing usable is stored
      */
     fun loadRecord(): CredentialRecord? = load()?.let { StoredCredential.decodeRecord(it) }
 }
 
 /**
- * Windows Credential Manager-backed [CredentialStore]: a single {@code CRED_TYPE_GENERIC} entry
- * under [target], protected per-user by the OS (DPAPI under the hood). Implemented with the JDK
- * Foreign Function &amp; Memory API (`java.lang.foreign`) against {@code Advapi32.dll}
- * ({@code CredWriteW} / {@code CredReadW} / {@code CredDeleteW} / {@code CredFree}) — no native
- * dependency, no JNI. The native binding is touched only on Windows; on any other OS every method
- * degrades to "no credential" so the desktop tool still runs (and the send flow falls back to a
- * fresh login). {@code --enable-native-access=ALL-UNNAMED} is already set for the app and tests.
+ * Windows Credential Manager-backed [CredentialStore]: a single `CRED_TYPE_GENERIC` entry under
+ * [target], protected per-user by the OS and bound to `Advapi32.dll` via the JDK Foreign Function &
+ * Memory API. On any other OS every method degrades to "no credential".
  */
 class WinCredentialStore(private val target: String = DEFAULT_TARGET) : CredentialStore {
 
@@ -197,7 +173,7 @@ class WinCredentialStore(private val target: String = DEFAULT_TARGET) : Credenti
                 val blob = secret.toByteArray(StandardCharsets.UTF_8)
                 val blobSeg = arena.allocate(blob.size.toLong().coerceAtLeast(1L))
                 MemorySegment.copy(blob, 0, blobSeg, ValueLayout.JAVA_BYTE, 0L, blob.size)
-                val cred = arena.allocate(CRED_SIZE, 8L) // zero-filled; pointer fields are aligned
+                val cred = arena.allocate(CRED_SIZE, 8L)
                 cred.set(ValueLayout.JAVA_INT, OFF_TYPE, CRED_TYPE_GENERIC)
                 cred.set(ValueLayout.ADDRESS, OFF_TARGET_NAME, wide(arena, target))
                 cred.set(ValueLayout.JAVA_INT, OFF_BLOB_SIZE, blob.size)
@@ -239,7 +215,6 @@ class WinCredentialStore(private val target: String = DEFAULT_TARGET) : Credenti
         return try {
             Arena.ofConfined().use { arena ->
                 val ok = Win.credDelete.invokeExact(wide(arena, target), CRED_TYPE_GENERIC, 0) as Int
-                // ERROR_NOT_FOUND (already absent) is success for our purposes.
                 ok != 0 || load() == null
             }
         } catch (_: Throwable) {
@@ -250,7 +225,7 @@ class WinCredentialStore(private val target: String = DEFAULT_TARGET) : Credenti
     /** Allocates a null-terminated UTF-16LE (Windows {@code LPCWSTR}) copy of [s] in [arena]. */
     private fun wide(arena: Arena, s: String): MemorySegment {
         val bytes = s.toByteArray(StandardCharsets.UTF_16LE)
-        val seg = arena.allocate(bytes.size.toLong() + 2L, 2L) // + 2-byte NUL; rest is zero-filled
+        val seg = arena.allocate(bytes.size.toLong() + 2L, 2L)
         MemorySegment.copy(bytes, 0, seg, ValueLayout.JAVA_BYTE, 0L, bytes.size)
         return seg
     }
@@ -307,7 +282,6 @@ class WinCredentialStore(private val target: String = DEFAULT_TARGET) : Credenti
         /** {@code CRED_PERSIST_LOCAL_MACHINE} — survives logoff, scoped to this machine + user. */
         private const val CRED_PERSIST_LOCAL_MACHINE = 2
 
-        // CREDENTIALW field byte offsets on the Windows x64 ABI (natural alignment, 80-byte struct).
         private const val CRED_SIZE = 80L
         private const val OFF_TYPE = 4L
         private const val OFF_TARGET_NAME = 8L
